--- a/translations/global+intl-icu.es.xlf
+++ b/translations/global+intl-icu.es.xlf
@@ -2627,7 +2627,7 @@
       </notes>
       <segment>
         <source>und</source>
-        <target>und</target>
+        <target>y</target>
       </segment>
     </unit>
     <unit id="dotZmBq" name="HINWEIS: Diese Aktion ist nur in der Stadt möglich.">
@@ -2638,7 +2638,7 @@
       </notes>
       <segment>
         <source>HINWEIS: Diese Aktion ist nur in der Stadt möglich.</source>
-        <target>HINWEIS: Diese Aktion ist nur in der Stadt möglich.</target>
+        <target>NOTA: Esta acción sólo está disponible en el pueblo.</target>
       </segment>
     </unit>
     <unit id="GnItekT" name="HINWEIS: Diese Aktion ist nur in Übersee möglich.">
@@ -2649,7 +2649,7 @@
       </notes>
       <segment>
         <source>HINWEIS: Diese Aktion ist nur in Übersee möglich.</source>
-        <target>HINWEIS: Diese Aktion ist nur in Übersee möglich.</target>
+        <target>NOTA: Esta acción sólo está disponible en el ultramundo.</target>
       </segment>
     </unit>
     <unit id="u9UzAKC" name="Neuer Beitrag in">
@@ -2660,7 +2660,7 @@
       </notes>
       <segment>
         <source>Neuer Beitrag in</source>
-        <target>Neuer Beitrag in</target>
+        <target>Nueva publicación en</target>
       </segment>
     </unit>
     <unit id="nyhYCez" name="Nachrichten suchen">
@@ -2812,7 +2812,7 @@
       </notes>
       <segment>
         <source>Deine Suchanfrage hat mehr Ergebnisse geliefert, als hier angezeigt werden können. Versuche, deine Anfrage zu präzisieren, wenn du nicht gefunden hast wonach du suchst.</source>
-        <target>Deine Suchanfrage hat mehr Ergebnisse geliefert, als hier angezeigt werden können. Versuche, deine Anfrage zu präzisieren, wenn du nicht gefunden hast wonach du suchst.</target>
+        <target>Su búsqueda ha dado más resultados de los que se pueden mostrar aquí. Intente afinar su consulta si no ha encontrado lo que buscaba.</target>
       </segment>
     </unit>
     <unit id="6QgTFsD" name="Wenn du deine Flucht erzwingst, wirst du zwangsläufig verletzt!">
@@ -2823,7 +2823,7 @@
       </notes>
       <segment>
         <source>Wenn du deine Flucht erzwingst, wirst du zwangsläufig verletzt!</source>
-        <target>Wenn du deine Flucht erzwingst, wirst du zwangsläufig verletzt!</target>
+        <target>Si fuerza su escape, ¡inevitablemente resultará herido!</target>
       </segment>
     </unit>
     <unit id="TvN2VX9" name="Diese Aktion kostet dich 1 AP!">
@@ -2834,7 +2834,7 @@
       </notes>
       <segment>
         <source>Diese Aktion kostet dich 1 AP!</source>
-        <target>Diese Aktion kostet dich 1 AP!</target>
+        <target>¡Esta acción te cuesta 1 PA!</target>
       </segment>
     </unit>
     <unit id="sXEtGH4" name="Diese Diskussion ist beendet.">
@@ -2895,7 +2895,7 @@
       </notes>
       <segment>
         <source>Bitte wähle die Art der Beschränkung.</source>
-        <target>Bitte wähle die Art der Beschränkung.</target>
+        <target>Seleccione el tipo de restricción.</target>
       </segment>
     </unit>
     <unit id="sYDz8ku" name="Wer?">
@@ -3019,7 +3019,7 @@
       </notes>
       <segment>
         <source>Mit offiziellen Gruppen in Kontakt treten</source>
-        <target>Mit offiziellen Gruppen in Kontakt treten</target>
+        <target>Ponte en contacto con los grupos oficiales</target>
       </segment>
     </unit>
     <unit id="UsfYbvX" name="Eine offizielle Gruppe kontaktieren">
@@ -3030,7 +3030,7 @@
       </notes>
       <segment>
         <source>Eine offizielle Gruppe kontaktieren</source>
-        <target>Eine offizielle Gruppe kontaktieren</target>
+        <target>Contactar con un grupo oficial</target>
       </segment>
     </unit>
     <unit id="jQrj982" name="via {group_inbox}">
@@ -3342,7 +3342,7 @@
       </notes>
       <segment>
         <source>Wenn möglich gib bitte einen Grund für deine Meldung an:</source>
-        <target>Wenn möglich gib bitte einen Grund für deine Meldung an:</target>
+        <target>Si es posible, proporcione la razón de su denuncia:</target>
       </segment>
     </unit>
     <unit id="APXGipg" name="Keinen Grund angeben">
@@ -3353,7 +3353,7 @@
       </notes>
       <segment>
         <source>Keinen Grund angeben</source>
-        <target>Keinen Grund angeben</target>
+        <target>No dar una razón</target>
       </segment>
     </unit>
     <unit id="ePXpaiZ" name="Cheating">
@@ -3373,7 +3373,7 @@
       </notes>
       <segment>
         <source>Flooding oder Spam</source>
-        <target>Flood o Spam</target>
+        <target>Spam</target>
       </segment>
     </unit>
     <unit id="XqMHQ7B" name="Verwendung einer anderen als der Forensprache">
@@ -3384,7 +3384,7 @@
       </notes>
       <segment>
         <source>Verwendung einer anderen als der Forensprache</source>
-        <target>Verwendung einer anderen als der Forensprache</target>
+        <target>Uso de un idioma que no sea el idioma del foro</target>
       </segment>
     </unit>
     <unit id="feEwSD7" name="Beleidigungen / Unangemessener Ausdruck">
@@ -3445,7 +3445,7 @@
       </notes>
       <segment>
         <source>Aufruf zu Gesetzesverstößen</source>
-        <target>Aufruf zu Gesetzesverstößen</target>
+        <target>Incitacion a las violaciones de la ley</target>
       </segment>
     </unit>
     <unit id="cczOm4l" name="Ermutigung von Selbstmord oder Selbstverletzung">
@@ -3466,7 +3466,7 @@
       </notes>
       <segment>
         <source>Inhalt melden</source>
-        <target>Inhalt melden</target>
+        <target>Reportar contenido</target>
       </segment>
     </unit>
     <unit id="4M3lurj" name="Verwendung einer anderen als der Stadtsprache">
@@ -3477,7 +3477,7 @@
       </notes>
       <segment>
         <source>Verwendung einer anderen als der Stadtsprache</source>
-        <target>Verwendung einer anderen als der Stadtsprache</target>
+        <target>Uso de un idioma distinto al del pueblo.</target>
       </segment>
     </unit>
     <unit id="GAVyRWS" name="Unangemessenen Inhalt melden">
