FR Translation for event town

--- a/translations/ghost+intl-icu.fr.xlf
+++ b/translations/ghost+intl-icu.fr.xlf
@@ -361,7 +361,7 @@
       </notes>
       <segment>
         <source>Event-Stadt</source>
-        <target>Villes event</target>
+        <target>Ville événement</target>
       </segment>
     </unit>
     <unit id="_GOkdZm" name="Spezialregeln">
