--- a/translations/game+intl-icu.fr.xlf
+++ b/translations/game+intl-icu.fr.xlf
@@ -23019,5 +23019,16 @@
         <target><![CDATA[<strong>Les portes de la ville sont fermées</strong>, impossible d'être rapatrié(e) !]]></target>
       </segment>
     </unit>
+    <unit id="im0eaJb">
+      <notes>
+        <note category="german">Das Stadttor ist &lt;strong&gt;geschlossen&lt;/strong&gt;! Vielleicht kannst du im Forum nach Hilfe fragen...</note>
+        <note category="from">twig:///templates/ajax/game/beyond/desert.html.twig</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Das Stadttor ist &lt;strong&gt;geschlossen&lt;/strong&gt;! Vielleicht kannst du im Forum nach Hilfe fragen...</source>
+        <target><![CDATA[Les portes sont <strong>fermées</strong> ! Peut être qu'en allant supplier sur le forum...]]></target>
+      </segment>
+    </unit>
   </file>
 </xliff>
